samples/_failures_safe/1761547518_5806ca_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_6997d8e0.c: In function ‘main’:
./samples/SAFE/__tmp_6997d8e0.c:132:12: error: missing terminating " character
  132 |     printf("WARN: %d
      |            ^~~~~~~~~
./samples/SAFE/__tmp_6997d8e0.c:132:5: error: expected expression at end of input
  132 |     printf("WARN: %d
      |     ^~~~~~
./samples/SAFE/__tmp_6997d8e0.c:132:5: error: expected declaration or statement at end of input
